Change a library name in the buildSrc module

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     androidTestImplementation Libs.Testing.RUNNER
     androidTestImplementation Libs.Testing.ESPRESSO
 
-    testImplementation Libs.Testing.CORE_TESTING
+    testImplementation Libs.Testing.CORE
     testImplementation Libs.Testing.TRUTH
 
     testImplementation Libs.Testing.MOCKITO
