First approach to handle netowork errors using custom exceptions

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,6 @@ dependencies {
     kapt Libs.UI.GLIDE_COMPILER
 
     implementation Libs.UI.RECYCLER_VIEW
+
+    implementation Libs.UI.SUPPORT_DESIGN
 }
